This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - added optional server side js error logging
          - panorama view:
            - auto adjust minemap column height
            - use escape_html setting from cgi.cfg

1.64-2   Sat Feb 23 17:14:11 CET 2013
          - config tool
            - save & reload page display already saved changes
          - Bug Fixes
            - added missing newline in services availability

1.64     Fri Feb 15 22:50:55 CET 2013
          - added user & group specific config overrides
          - added json export for availability data
          - added noexternalforks parameter to skip forks
          - added show_host_attempts config option
          - added ssl_verify_hostnames config option
          - added show_full_commandline_source config option
          - added check all switch to site panel
          - make colums selectable for json requests
          - use user sort for show_custom_vars
          - reports
            - added locales support (en, de, it, es, fr)
            - fixed url reports containing icon images
          - config tool
            - added one click save & reload button
          - logcache
            - added new command logcacheclean to remove old log entries
          - Bug Fixes
            - fixed js error in conf tool
            - fixed removal of deprecated plugins on rpm update
            - fixed memory leak in livestatus accessor

1.62     Sun Jan  6 21:20:16 CET 2013
          - added filter to comments / downtimes page
          - added json / excel export to comments / downtimes page
          - moved plugins config items in component sections of config
          - changed first day of week to monday, can be reverted by setting first_day_of_week=0
          - reworked configuration documentation
          - new reporting module
            - put both reports edit steps into one page